# stack-depth-analyzer

./: README.md  pyproject.toml  setup.cfg
.github/: renovate.json
.github/workflows/: lint.yml
app/: __main__.py  _cli.py
app/elf_arm_thumbv6m/: __main__.py  common.py  config.py  parse.py
app/elf_arm_thumbv6m/entrypoints/: config.py  model.py  parse.py
app/elf_arm_thumbv6m/functions/: plot.py.todo
app/elf_arm_thumbv6m/functions/s01_symbols_table/: demangle.py  model.py
app/elf_arm_thumbv6m/functions/s02_text_regions/: model.py  parse.py
app/elf_arm_thumbv6m/functions/s03_instructions/: cursor.py  model.py
app/elf_arm_thumbv6m/functions/s04_instructions_effect/: _program_counter_effect.py  _stack_pointer_effect.py  model.py
app/elf_arm_thumbv6m/functions/s05_instructions_graph/: parse.py  plot.py.todo
app/elf_arm_thumbv6m/functions/s06_functions_effect/: parse.py
app/elf_arm_thumbv6m/instructions_decoder/: model.py
app/elf_arm_thumbv6m/program/: model.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/: __main__.py  config.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/entrypoints/: common.py  config.py  model.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/functions/: config.py  model.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/functions/s01_symbols_table/: parse.py
app/elf_arm_thumbv6m_cortex_m0/functions/s03_instructions/: cursor.py  model.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/functions/s04_instructions_effect/: _program_counter_effect.py  config.py  parse.py
app/elf_arm_thumbv6m_cortex_m0/instructions_decoder/: parse.py
app/elf_arm_thumbv6m_cortex_m0/program/: parse.py
(+2 files in other folders)
